updated heroku app url

--- a/config.env
+++ b/config.env
@@ -54,7 +54,7 @@ AUTHOR_NAME = "JackJack"
 AUTHOR_URL = "https://status.blackpirate.be.eu.org/"
 
 # qBittorrent
-BASE_URL_OF_BOT = "pizzlet2dyywodbni.herokuapp.com"
+BASE_URL_OF_BOT = "https://pizzlet2dyywodbni.herokuapp.com"
 SERVER_PORT = ""
 WEB_PINCODE = ""
 QB_SEED = ""
